连通数据库

--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@ MONGO_URL=mongodb://localhost:27017/
 _SECRET=zhufeng
 LOCAL=true
 
-MYSQL_URL=localhost
-MYSQL_PORT=3307
+MYSQL_URL=zhoubichuan.com
+MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASS=ZBCzbc123
