--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "pm2:stop": "pm2 stop common-node",
-    "pm2": "pm2 start app.js --name common-node",
+    "pm2:start": "pm2 start app.js --name common-node",
+    "pm2": "npm run pm2:stop && npm run pm2:start",
     "dev": "dotenv -e .env.dev  nodemon app.js",
     "sit": "dotenv -e .env.sit nodemon app.js",
     "uat": "dotenv -e .env.uat nodemon app.js",
