--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ _AUTHSOURCE=admin
 _USER=root
 _PASS=ZBCzbc123
 
-MYSQL_URL=https://zhoubichuan.com
+MYSQL_URL=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASS=ZBCzbc123
