--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URL=mongodb://zhoubichuan.com:27017/
-_SECRET=zhufeng
+MONGO_URL=mongodb://localhost.com:27017/home
+_SECRET=zhoubichuan
 _AUTHSOURCE=admin
 _USER=root
 _PASS=ZBCzbc123
