--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "mongoose": "8.2.3",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
   },
