--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
+    "csvtojson": "^2.0.10",
     "dotenv-cli": "^7.4.1",
     "pm2": "^5.3.1"
   }
